--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Scott J Maddox"]
 license = "MIT/Apache-2.0"
 description = "A logger for the wasm32-unknown-unknown target that prints all messages to the web console"
-
+repository = "https://github.com/scottjmaddox/rust-web-console-logger"
 
 [dependencies]
 log = "0.4"
